# python-project-50

./: .gitignore  README.md  makefile  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  compare_data.py  gendiff_logic.py  parse_data.py
gendiff/format_scripts/: compare_data.py  compare_files.py  format_common.py  format_plain.py  format_stylish.py  parse_data.py
gendiff/formatters/: format_json.py  format_plain.py  format_stylish.py
gendiff/scripts/: compare_files.py  format_diff.py  gendiff.py  main_script.py
tests/: test_gendiff.py
tests/fixtures/: correct_result2.txt  correct_result2_end.txt  correct_result5.txt  correct_result6.txt  file1.yml  file2.yml  file3.yaml
