[tool.poetry]
name = "gendiff"
version = "0.1.0"
description = ""
authors = ["Pavel Beliavskii <prostopasha@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
test_gendiff = "tests.test_gendiff:main"
