[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Pavel Beliavskii <prostopasha@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]
repository = "https://github.com/Prosto-Pasha/python-project-50"

classifiers = [
    'Topic :: Utilities',
    'Programming Language :: Python',
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'License :: Freeware',
]

[tool.poetry.dependencies]
python = "^3.8.1"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.main_script:main"
test_gendiff = "tests.test_gendiff:main"
